[package]
name = "vortex"
version = "0.1.0"
description = "A P2P file transfer protocol"
authors = ["The Dragonfly Developers"]
homepage = "https://d7y.io/"
repository = "https://github.com/dragonflyoss/vortex.git"
keywords = ["dragonfly", "p2p", "file transfer protocol"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "2.0"
rand = "0.8"
bytes = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "vortex"
harness = false
