[package]
name = "vortex-protocol"
version = "0.1.5"
description = "A P2P file transfer protocol"
authors = ["The Dragonfly Developers"]
homepage = "https://d7y.io/"
repository = "https://github.com/dragonflyoss/vortex.git"
keywords = ["dragonfly", "p2p"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "2.0"
rand = "0.8"
bytes = "1"
chrono = { version = "0.4.42", features = ["serde", "clock"] }

[dev-dependencies]
criterion = "0.8"
proptest = "1.9"

[[bench]]
name = "vortex"
harness = false
